force-app/main/default/objects/RDHolderCompPricing__c/RDHolderCompPricing__c.object-meta.xml
<CustomObject>
    <label>RDHolderCompPricing</label>
    <nameField>
        <label>RDHolderCompPricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDHolderCompPricings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>