force-app/main/default/objects/RDHolderCompPricing__c/fields/MSMaxCommission__c.field-meta.xml
<CustomField>
    <fullName>MSMaxCommission__c</fullName>
    <label>MSMaxCommission</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>