force-app/main/default/objects/RDHolderCompPricing__c/fields/PriceLevel__c.field-meta.xml
<CustomField>
    <fullName>PriceLevel__c</fullName>
    <label>PriceLevel</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>