force-app/main/default/objects/RDHolderCompPricing__c/fields/QtyUL__c.field-meta.xml
<CustomField>
    <fullName>QtyUL__c</fullName>
    <label>QtyUL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>