force-app/main/default/objects/RDHolderCompPricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Class__c</columns>
    <columns>ListPrice__c</columns>
    <columns>MinSellPrice__c</columns>
    <columns>MSMaxCommission__c</columns>
    <columns>Part__c</columns>
    <columns>PartMatl__c</columns>
    <columns>PriceLevel__c</columns>
    <columns>Prod__c</columns>
    <columns>QtyLL__c</columns>
    <columns>QtyUL__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Size__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>